Grace/tests/gibbs/errors/t170.grace
// ERROR = L0006
var llamas := "Awesome"
print "llamas are {llamas"
